--- a/index.html
+++ b/index.html
@@ -508,10 +508,29 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-page-footer">
+          <p class="subscribe-paragraph-footer">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="email-label" for="input-subscribe">
+              <input
+                class="input-cubscribe-footer-page"
+                name="input-subscribe"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="button-subscribe-footer" type="submit">
+              Subscribe
+              <svg class="icon-subscribe-footer" width="24" height="20">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn">
           <svg
