--- a/index.html
+++ b/index.html
@@ -511,14 +511,14 @@
         <div class="subscribe-page-footer">
           <p class="subscribe-paragraph-footer">Subscribe</p>
           <form class="subscribe-form">
-            <label class="email-label" for="input-subscribe">
-              <input
-                class="input-cubscribe-footer-page"
-                name="input-subscribe"
-                type="email"
-                placeholder="E-mail"
-              />
-            </label>
+            <label class="email-label" for="input-subscribe"></label>
+            <input
+              class="input-cubscribe-footer-page"
+              name="input-subscribe"
+              id="input-subscribe"
+              type="email"
+              placeholder="E-mail"
+            />
             <button class="button-subscribe-footer" type="submit">
               Subscribe
               <svg class="icon-subscribe-footer" width="24" height="24">
