--- a/index.html
+++ b/index.html
@@ -561,22 +561,27 @@
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
-            <div class="review-form-field-wrapper">
+            <div class="review-form-modal">
               <label for="user-phone" class="review-form-field-label"
                 >Phone</label
               >
-              <input
-                type="tel"
-                class="review-form-input"
-                id="user-phone"
-                name="user-phone"
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                title="xxx-xxx-xx-xx"
-                required
-              />
-              <svg class="review-form-field-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-              </svg>
+              <div class="review-form-field-wrapper">
+                <label for="user-phone" class="review-form-field-label"
+                  >Phone</label
+                >
+                <input
+                  type="tel"
+                  class="review-form-input"
+                  id="user-phone"
+                  name="user-phone"
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                  title="xxx-xxx-xx-xx"
+                  required
+                />
+                <svg class="review-form-field-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                </svg>
+              </div>
             </div>
             <div class="review-form-field-wrapper">
               <label for="user-email" class="review-form-field-label"
