--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       </div>
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg
@@ -566,9 +566,6 @@
                 >Phone</label
               >
               <div class="review-form-field-wrapper">
-                <label for="user-phone" class="review-form-field-label"
-                  >Phone</label
-                >
                 <input
                   type="tel"
                   class="review-form-input"
