--- a/index.html
+++ b/index.html
@@ -580,31 +580,35 @@
                 </svg>
               </div>
             </div>
-            <div class="review-form-field-wrapper">
+            <div class="review-form-modal">
               <label for="user-email" class="review-form-field-label"
                 >Email</label
               >
-              <input
-                type="email"
-                class="review-form-input"
-                id="user-email"
-                name="user-email"
-                required
-              />
-              <svg class="review-form-field-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-              </svg>
+              <div class="review-form-field-wrapper">
+                <input
+                  type="email"
+                  class="review-form-input"
+                  id="user-email"
+                  name="user-email"
+                  required
+                />
+                <svg class="review-form-field-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                </svg>
+              </div>
             </div>
-            <div class="review-form-field-wrapper">
+            <div class="review-form-modal">
               <label for="user-comment" class="review-form-field-label"
                 >Comment</label
               >
-              <textarea
-                class="review-form-comment"
-                name="user comment"
-                id="user-comment"
-                placeholder="Text input"
-              ></textarea>
+              <div class="review-form-field-wrapper">
+                <textarea
+                  class="review-form-comment"
+                  name="user comment"
+                  id="user-comment"
+                  placeholder="Text input"
+                ></textarea>
+              </div>
             </div>
             <div class="review-form-checkbox">
               <input
