--- a/index.html
+++ b/index.html
@@ -532,111 +532,7 @@
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
     <div class="backdrop is-open">
-      <div class="modal">
-        <button class="close-btn" type="button">
-          <svg
-            class="close-btn-icon"
-            width="8"
-            height="8"
-            aria-label="modal close icon"
-          >
-            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-          </svg>
-        </button>
-        <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form class="review-form">
-          <div class="review-form-modal">
-            <label for="user-name" class="review-form-field-label">Name</label>
-            <div class="review-form-field-wrapper">
-              <input
-                type="text"
-                class="review-form-input"
-                id="user-name"
-                name="user-name"
-                pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+"
-                title="Alex"
-                required
-              />
-              <svg class="review-form-field-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-              </svg>
-            </div>
-            <div class="review-form-modal">
-              <label for="user-phone" class="review-form-field-label"
-                >Phone</label
-              >
-              <div class="review-form-field-wrapper">
-                <input
-                  type="tel"
-                  class="review-form-input"
-                  id="user-phone"
-                  name="user-phone"
-                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                  title="xxx-xxx-xx-xx"
-                  required
-                />
-                <svg class="review-form-field-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="review-form-modal">
-              <label for="user-email" class="review-form-field-label"
-                >Email</label
-              >
-              <div class="review-form-field-wrapper">
-                <input
-                  type="email"
-                  class="review-form-input"
-                  id="user-email"
-                  name="user-email"
-                  required
-                />
-                <svg class="review-form-field-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="review-form-modal">
-              <label for="user-comment" class="review-form-field-label"
-                >Comment</label
-              >
-              <div class="review-form-field-wrapper">
-                <textarea
-                  class="review-form-comment"
-                  name="user comment"
-                  id="user-comment"
-                  placeholder="Text input"
-                ></textarea>
-              </div>
-            </div>
-            <div class="review-form-checkbox">
-              <input
-                type="checkbox"
-                class="review-form-checkbox visually-hidden"
-                id="user-privacy"
-                value="true"
-                required
-              />
-              <label for="user-privacy" class="review-form-checkbox-label">
-                <span class="review-form-own-checkbox">
-                  <svg
-                    class="review-form-own-checkbox-icon"
-                    aria-label="checkbox icon"
-                    width="10"
-                    height="8"
-                  >
-                    <use href="./images/icons.svg#icon-Vector"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="review-form-privacy-link" href="#">Privacy Policy</a>
-              </label>
-            </div>
-            <button class="review-form-submit">Send</button>
-          </div>
-        </form>
-      </div>
+      <div class="modal"></div>
     </div>
   </body>
 </html>
