--- a/index.html
+++ b/index.html
@@ -532,7 +532,13 @@
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
     <div class="backdrop is-open">
-      <div class="modal"></div>
+      <div class="modal">
+        <button class="icon-close-btn">
+          <svg class="icon-close-backdrop" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </body>
 </html>
