--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@
     <!-- BACKDROP WITH MODAL WINDOW -->
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="icon-close-btn">
+        <button class="icon-close-btn" type="button">
           <svg class="icon-close-backdrop" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
       </div>
