--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                 class="input-type-page"
                 type="text"
                 id="user-name"
-                name="user-name"
+                name="user name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
@@ -557,13 +557,13 @@
             </div>
           </div>
           <div class="modal-review-page">
-            <label class="review-label-page" for="user-name">Phone</label>
+            <label class="review-label-page" for="user-phone">Phone</label>
             <div class="modal-review-page">
               <input
                 class="input-type-page"
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-phone"
+                name="user phone"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-telephone"></use>
@@ -571,13 +571,13 @@
             </div>
           </div>
           <div class="modal-review-page">
-            <label class="review-label-page" for="user-name">Email</label>
+            <label class="review-label-page" for="user-email">Email</label>
             <div class="modal-review-page">
               <input
                 class="input-type-page"
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-email"
+                name="user email"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
