--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                 class="input-type-page"
                 type="text"
                 id="user-name"
-                name="user name"
+                name="user-name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
@@ -563,7 +563,7 @@
                 class="input-type-page"
                 type="text"
                 id="user-phone"
-                name="user phone"
+                name="user-phone"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-telephone"></use>
@@ -577,7 +577,7 @@
                 class="input-type-page"
                 type="text"
                 id="user-email"
-                name="user email"
+                name="user-email"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
