--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
           </div>
           <div class="modal-review-page">
             <label class="review-label-page" for="user-phone">Phone</label>
-            <div class="modal-review-page">
+            <div class="review-input-icon">
               <input
                 class="input-type-page"
                 type="text"
@@ -572,7 +572,7 @@
           </div>
           <div class="modal-review-page">
             <label class="review-label-page" for="user-email">Email</label>
-            <div class="modal-review-page">
+            <div class="review-input-icon">
               <input
                 class="input-type-page"
                 type="text"
