--- a/index.html
+++ b/index.html
@@ -584,6 +584,34 @@
               </svg>
             </div>
           </div>
+          <div class="review-comment-text">
+            <label for="user-comment" class="review-label-page">Comment</label>
+            <textarea
+              class="comment-user"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="review-checkbox-page">
+            <input
+              class="privacy-checkbox visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="privacy-label-text" for="user-privacy">
+              <span class="privacy-text"
+                ><svg class="privacy-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-privacy"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-privacy" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="send-button">Sand</button>
         </form>
       </div>
     </div>
