--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       </div>
     </footer>
     <!-- BACKDROP WITH MODAL WINDOW -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="icon-close-btn" type="button">
           <svg class="icon-close-backdrop" width="8" height="8">
